Setting and sending password works

--- a/src/main/resources/templates/send-password.html
+++ b/src/main/resources/templates/send-password.html
@@ -49,11 +49,9 @@
     <h1>Appointment at ${companyName}</h1>
     <p>
         Dear ${username},<br><br>
-        You have an appointment on ${appointmentDate}, at the ${appointmentHour} o'clock.
+        Here is your password for your account:<br>
+        ${password}
         <br>
-        The services that you are scheduled are:<br>
-        ${service}
-        <br><br>
         If you have any questions or need assistance along the way, don't hesitate to reach out to our support team at ${adminEmail}. We're here to help you make the most of your journey with us.
         <br><br>
         Thank you for choosing ${companyName}! We look forward to serving you and making your experience exceptional.
