Modified email language

--- a/src/main/resources/templates/send-password-hospital.html
+++ b/src/main/resources/templates/send-password-hospital.html
@@ -46,15 +46,15 @@
 
 <body>
 <div class="container">
-    <h1>Welcome to ${companyName}!</h1>
+    <h1>Bine ați venit la ${companyName}!</h1>
     <p>
-        Dear ${username},<br><br>
-        We are thrilled to have you join our team at ${companyName}. Below is your account password:<br>
+        Dragă ${username},<br><br>
+        Suntem încântați să vă avem în echipa noastră la ${companyName}. Mai jos este parola contului dumneavoastră:<br>
         ${password}
         <br>
-        Should you have any questions or need assistance, please do not hesitate to contact our support team at ${adminEmail}. We are here to support you as you embark on this new journey with us.
+        Dacă aveți întrebări sau aveți nevoie de asistență, vă rugăm să nu ezitați să contactați echipa noastră de suport la ${adminEmail}. Suntem aici pentru a vă sprijini în această nouă călătorie cu noi.
         <br><br>
-        Thank you for becoming a part of the ${companyName} family. We look forward to working with you and achieving great things together.
+        Vă mulțumim că ați devenit parte din familia ${companyName}. Așteptăm cu nerăbdare să lucrăm împreună și să realizăm lucruri mărețe împreună.
     </p>
 </div>
 </body>
