--- a/src/main/resources/templates/updated-appointment-mail.html
+++ b/src/main/resources/templates/updated-appointment-mail.html
@@ -46,14 +46,14 @@
 
 <body>
 <div class="container">
-    <h1>Appointment at ${companyName}</h1>
+    <h1>Programare la ${companyName}</h1>
     <p>
-        Dear ${username},<br><br>
-        We have updated your appointment on ${appointmentDate}, at the ${appointmentHour} o'clock.
+        Dragă ${username},<br><br>
+        V-am actualizat programarea pentru ${appointmentDate}, la ora ${appointmentHour}.
         <br><br>
-        If you have any questions or need assistance along the way, don't hesitate to reach out to our support team at ${adminEmail}. We're here to help you make the most of your journey with us.
+        Dacă aveți întrebări sau aveți nevoie de asistență, nu ezitați să contactați echipa noastră de suport la ${adminEmail}. Suntem aici pentru a vă ajuta să profitați la maximum de experiența dumneavoastră cu noi.
         <br><br>
-        Thank you for choosing ${companyName}! We look forward to serving you and making your experience exceptional.
+        Vă mulțumim că ați ales ${companyName}! Așteptăm cu nerăbdare să vă servim și să facem experiența dumneavoastră excepțională.
     </p>
 </div>
 </body>
