--- a/src/main/resources/templates/send-security-code.html
+++ b/src/main/resources/templates/send-security-code.html
@@ -52,20 +52,19 @@
 
 <body>
 <div class="container">
-    <h1>Password Reset Request</h1>
+    <h1>Cerere de Resetare a Parolei</h1>
     <p>
-        Dear ${username},<br><br>
-        I hope this message finds you well. If you find yourself in need of resetting your password, we are here to assist you every step of the way. To initiate the password reset process, please follow the link provided below:
+        Dragă ${username},<br><br>
+        Sper că acest mesaj vă găsește bine. Dacă aveți nevoie să vă resetați parola, suntem aici pentru a vă asista la fiecare pas. Pentru a iniția procesul de resetare a parolei, vă rugăm să urmați link-ul de mai jos:
         <br><br>
-    <h3>Security Code: <b style="color: #0056b3">${securityCode}</b></h3>
+    <h3>Cod de Securitate: <b style="color: #0056b3">${securityCode}</b></h3>
     <br><br>
-    If you did not request this password reset or believe this message was sent in error, please disregard it. Your account security is important to us, and we take all necessary precautions to protect your information.
+    Dacă nu ați solicitat această resetare a parolei sau credeți că acest mesaj a fost trimis din greșeală, vă rugăm să îl ignorați. Securitatea contului dumneavoastră este importantă pentru noi și luăm toate măsurile necesare pentru a vă proteja informațiile.
     <br><br>
-    If you encounter any issues or have questions regarding the password reset process, please do not hesitate to reach out to our customer support team at ${adminEmail}. Our dedicated team is always ready to help and provide the necessary guidance.
+    Dacă întâmpinați probleme sau aveți întrebări legate de procesul de resetare a parolei, nu ezitați să contactați echipa noastră de suport la ${adminEmail}. Echipa noastră dedicată este întotdeauna gata să ajute și să ofere îndrumările necesare.
     <br><br>
-    Thank you for choosing ${companyName}. We value your trust in us, and we are committed to ensuring the security of your account.
+    Vă mulțumim că ați ales ${companyName}. Apreciem încrederea pe care ne-o acordați și suntem dedicați să asigurăm securitatea contului dumneavoastră.
     </p>
-
 </div>
 </body>
 
